--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
-    "prisma": "^4.12.0"
+    "prisma": "^4.12.0",
+    "bcrypt": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "@types/bcrypt": "^5.0.0"
   }
 }
